# Android_Rev

./: .gitignore  Basics to know for android reversing.md  Setup Frida.md  adb commands
Android Notes/: Android Security Internals Notes.md
Injured_android/: Solution.md  lvl_13.html  lvl_13.js  lvl_16.html  lvl_16.js  lvl_16.py  lvl_17.js
Injured_android/level_18/: settings.gradle.kts
Injured_android/level_18/app/: build.gradle.kts
Injured_android/level_18/app/src/androidTest/java/com/example/level_18/: ExampleInstrumentedTest.java
Injured_android/level_18/app/src/main/: AndroidManifest.xml
Injured_android/level_18/app/src/main/java/com/example/level_18/: MainActivity.java
Injured_android/level_18/app/src/main/res/values/: strings.xml  themes.xml
Injured_android/level_18/app/src/main/res/values-night/: themes.xml
Injured_android/level_18/gradle/wrapper/: gradle-wrapper.properties
Uncrackable Android/UnCrackable_lvl_1/: Solution.md
Uncrackable Android/UnCrackable_lvl_3/: Solution.md  lvl3.js  lvl_3.js
Uncrackable Android/UnCrackable_lvl_4/: lvl_0.9.js
dynamic2/: settings.gradle.kts
dynamic2/app/: build.gradle.kts
dynamic2/app/src/main/: AndroidManifest.xml
dynamic2/app/src/main/assets/: classes.dex
dynamic2/app/src/main/cpp/: CMakeLists.txt  anti.c  dynamic.cpp
dynamic2/app/src/main/java/com/example/dynamic/: MainActivity.java  greet.java
dynamic2/app/src/main/res/layout/: activity_main.xml
dynamic2/gradle/wrapper/: gradle-wrapper.properties
dynamic_load/: MainActivity.java  greet.java
(+1 files in other folders)
